Add sample app, refine start

--- a/container_configs/etc/nginx/sites-enabled/default.conf
+++ b/container_configs/etc/nginx/sites-enabled/default.conf
@@ -1,14 +1,13 @@
-# the proxied ruby service connection url
+# the proxied ruby service
 upstream backendservice {
-    # server http://localhost:9292;
-    server unix:/var/run/puma.sock;
+    server unix:///app/puma/socket;
 }
 
 # the actual listing socket
 server {
     listen 80 default;
 
-    # ELB stores the protocol used between the client 
+    # ELB stores the protocol used between the client
     # and the load balancer in the X-Forwarded-Proto request header.
     # Check for 'https' and redirect if not
     # if ($http_x_forwarded_proto != 'https') {
@@ -25,16 +24,11 @@ server {
     # deny all requests for 'dot' files, don't log
     location ~ /\. {deny all; access_log off; log_not_found off;}
 
-    # if the incoming URL is bare, go directly to backendservice
-    location = / {
-        proxy_pass http://backendservice;
-    }
-
-    # if the url is otherwise, look for a file first then go 
+    # if the url is otherwise, look for a file first then go
     # to backend service
     location / {
         root /app/public;
-        try_files $uri $uri/ @backendproxy;
+        try_files $uri @backendproxy;
         expires max;
     }
 
